# hs-kafka

./: .gitignore  LICENSE  README.md  cabal.project  kafka-client.cabal  kafka-simple.cabal  kafka.cabal
app/: ListOffsetsExample.hs  Main.hs
app/ListOffsets/: Main.hs
bench/: Benchmark.hs
example/: Consumer.hs  Group.hs  Interactive.hs  ListOffsetsExample.hs  NewConsumer.hs  ProduceFetchExample.hs  Producer.hs
src/: Combinator.hs  Common.hs  FetchRequest.hs  FetchResponse.hs  HeartbeatRequest.hs  Kafka.hs  KafkaResponse.hs  KafkaWriter.hs  ListOffsetsRequest.hs  ListOffsetsResponse.hs  Prelude.hs  ProduceRequest.hs  ProduceResponse.hs  Varint.hs
src/Kafka/: Combinator.hs  Common.hs  Consumer.hs  ErrorCode.hs  GoodConsumer.hs  Producer.hs  Response.hs  Topic.hs  Varint.hs  Writer.hs  Zigzag.hs  foo1.txt  foo2.txt
src/Kafka/Fetch/: Request.hs  Response.hs
src/Kafka/Heartbeat/: Request.hs  Response.hs
src/Kafka/Internal/: Combinator.hs  Request.hs  Response.hs  ShowDebug.hs  Topic.hs  Writer.hs  Zigzag.hs
src/Kafka/Internal/Fetch/: Request.hs  Response.hs
src/Kafka/Internal/FindCoordinator/: Request.hs  Response.hs
src/Kafka/Internal/Heartbeat/: Request.hs  Response.hs
src/Kafka/Internal/JoinGroup/: Request.hs  Response.hs
src/Kafka/Internal/LeaveGroup/: Request.hs  Response.hs
src/Kafka/Internal/ListOffsets/: Request.hs  Response.hs
src/Kafka/Internal/Metadata/: Request.hs  Response.hs
src/Kafka/Internal/OffsetCommit/: Request.hs  Response.hs
src/Kafka/Internal/OffsetFetch/: Request.hs  Response.hs
src/Kafka/Internal/Produce/: Request.hs  Response.hs
src/Kafka/Internal/Request/: Types.hs
src/Kafka/Internal/SyncGroup/: Request.hs  Response.hs
src/Kafka/JoinGroup/: Request.hs  Response.hs
src/Kafka/LeaveGroup/: Request.hs  Response.hs
src/Kafka/ListOffsets/: Request.hs  Response.hs
src/Kafka/Metadata/: Request.hs  Response.hs
src/Kafka/OffsetCommit/: Request.hs  Response.hs
src/Kafka/OffsetFetch/: Request.hs  Response.hs
src/Kafka/Produce/: Request.hs  Response.hs
src/Kafka/SyncGroup/: Request.hs  Response.hs
test/: Benchmark.hs  Laws.hs  Test.hs  UnitTests.hs  VarintTest.hs  fetch-many-partitions-request  kafka-multiple-payload  listoffsets-many-partitions-request  listoffsets-no-partitions-request
test/golden/: fetch-one-partition-request  fetch-response-bytes  fetch-response-parsed  joingroup-null-member-id-request  joingroup-with-member-id-request  listoffsets-one-partition-request  produce-one-payload-request
