cabal-version: 2.2
name:
  kafka
version:
  0.1
-- synopsis:
-- description:
-- bug-reports:
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  Ethan Jones
maintainer:
  joneetha@oregonstate.edu
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md

library
  exposed-modules:
    Kafka.Common
    Kafka.Consumer
    Kafka.Producer

    Kafka.Internal.Combinator
    Kafka.Internal.Fetch.Request
    Kafka.Internal.Fetch.Response
    Kafka.Internal.Heartbeat.Request
    Kafka.Internal.Heartbeat.Response
    Kafka.Internal.JoinGroup.Request
    Kafka.Internal.JoinGroup.Response
    Kafka.Internal.LeaveGroup.Request
    Kafka.Internal.LeaveGroup.Response
    Kafka.Internal.ListOffsets.Request
    Kafka.Internal.ListOffsets.Response
    Kafka.Internal.Metadata.Request
    Kafka.Internal.Metadata.Response
    Kafka.Internal.OffsetCommit.Request
    Kafka.Internal.OffsetCommit.Response
    Kafka.Internal.OffsetFetch.Request
    Kafka.Internal.OffsetFetch.Response
    Kafka.Internal.Produce.Request
    Kafka.Internal.Produce.Response
    Kafka.Internal.Request
    Kafka.Internal.Request.Types
    Kafka.Internal.Response
    Kafka.Internal.ShowDebug
    Kafka.Internal.SyncGroup.Request
    Kafka.Internal.SyncGroup.Response
    Kafka.Internal.Topic
    Kafka.Internal.Writer
    Kafka.Internal.Zigzag
  ghc-options:
    -Wall
    -Werror
    -O2
  -- other-modules:
  build-depends:
    , attoparsec
    , base ^>=4.12.0.0
    , byteslice >= 0.1.1.0 && < 0.2.0.0
    , bytestring
    , castagnoli
    , chronos >= 1.0.5 && < 1.1
    , containers
    , cpu >= 0.1.2 && < 0.2
    , crc32c
    , ip >= 1.5.0
    , mtl >= 2.2.2 && < 2.3
    , primitive >= 0.7.0.0 && < 0.8.0.0
    , primitive-unaligned >= 0.1.1.0 && < 0.2.0.0
    , primitive-unlifted >= 0.1.1.0 && < 0.2.0.0
    , primitive-slice >= 0.1.0.0 && < 0.2.0.0
    , sockets >= 0.6.0.0 && < 0.7.0.0
    , stm >= 2.5.0.0 && < 2.6.0.0
    , text
    , torsor >= 0.1 && < 0.2
    , transformers
  hs-source-dirs:
    src
  default-language:
    Haskell2010

executable producer
  main-is:
    Producer.hs
  build-depends:
    , base ^>=4.12.0.0
    , byteslice >= 0.1.1.0 && < 0.2.0.0
    , bytestring
    , containers >= 0.6.0.1 && < 0.7.0.0
    , ip >= 1.5.0
    , kafka
    , primitive >= 0.7.0.0 && < 0.8.0.0
    , primitive-unlifted >= 0.1.1.0 && < 0.2.0.0
    , random >= 1.1 && < 1.2
    , sockets >= 0.6.0.0 && < 0.7.0.0
  hs-source-dirs:
    example
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N1

executable consumer
  main-is:
    Consumer.hs
  build-depends:
    , base ^>=4.12.0.0
    , byteslice >= 0.1.1.0 && < 0.2.0.0
    , bytestring
    , chronos >= 1.0.5 && < 1.1
    , containers >= 0.6.0.1 && < 0.7.0.0
    , ip >= 1.5.0
    , kafka
    , mtl >= 2.2.2 && < 2.3
    , primitive >= 0.7.0.0 && < 0.8.0.0
    , primitive-unlifted >= 0.1.1.0 && < 0.2.0.0
    , random >= 1.1 && < 1.2
    , sockets >= 0.6.0.0 && < 0.7.0.0
    , stm
    , torsor >= 0.1 && < 0.2
  hs-source-dirs:
    example
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N1

test-suite laws
  type:
    exitcode-stdio-1.0
  main-is:
    Laws.hs
  hs-source-dirs:
    test
  default-language:
    Haskell2010
  build-depends:
    , base
    , kafka
    , hedgehog
    , hedgehog-classes
  ghc-options:
    -Wall
    -Werror
    -O2

test-suite unit
  type:
    exitcode-stdio-1.0
  main-is:
    UnitTests.hs
  hs-source-dirs:
    test
  build-depends:
    , attoparsec
    , base ^>=4.12.0.0
    , bytestring
    , containers >= 0.6.0.1 && < 0.7.0.0
    , kafka
    , primitive >= 0.7.0.0 && < 0.8.0.0
    , primitive-unlifted >= 0.1.1.0 && < 0.2.0.0
    , tasty
    , tasty-golden
    , tasty-hunit
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -O2

benchmark bench
  type:
    exitcode-stdio-1.0
  main-is:
    Benchmark.hs
  hs-source-dirs:
    bench
  build-depends:
    , attoparsec
    , base ^>=4.12.0.0
    , bytestring
    , file-embed
    , gauge
    , kafka
    , primitive >= 0.7.0.0 && < 0.8.0.0
    , primitive-unlifted >= 0.1.1.0 && < 0.2.0.0
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -Werror
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N1
